# aoc

2018/: day1.cr  day1.rb  day10.cr  day11.cr  day12.cr  day14  day14a.cr  day15.cr  day18.ml  day2.cr  day3.cr  day3.rb  day4.cr  day5.cr  day5.rb  day6.cr  day7.cr  day8.cr  day9.cr
2019/clj/: day01.clj  day01.ipynb  day02.clj  day02.ipynb  day03.clj  day03.ipynb  day04.clj  day04.ipynb  day05.clj  day05.ipynb  day06.clj  day06.ipynb  day07.clj  day07.ipynb  day08.clj  day08.ipynb  day09.clj  day09.ipynb  day10.clj  day10.ipynb  day11.clj  day11.ipynb  day12.clj  day12.ipynb  day13.clj  day13.ipynb  day14.clj  day14.ipynb  day16.clj  day16.ipynb
2019/julia/: day01.ipynb  day01.jl  day02.ipynb  day02.jl
2019/kotlin/: day01.ipynb
2019/tcl/: .gitignore  Makefile  Untitled.ipynb  all.tcl  day01.ipynb  day01.tcl  day01.test  day02-tcc.ipynb  day02.ipynb  day02.tcl  day02.test  day03.ipynb  day03.tcl  day03.test  day04.ipynb  day04.tcl  day04.test  day05.ipynb  day05.tcl  day05.test  day06.ipynb  day06.tcl  day06.test  day07.tcl  day07.test  day08-grid.tcl  day08-tcl.ipynb  day08.ipynb  day08.tcl  day08.test  day09.tcl  (+24 more)
2019/tcl/lib/cintcode/: .CMakeLists.txt.swp  CMakeLists.txt  cintcode-0.1.tm  library.c  library.h  tclsh.exe.stackdump  test.tcl
2019/tcl/lib/cintcode/.ipynb_checkpoints/: cintcode-0.1-checkpoint.tm
2019/tcl/lib/cintcode/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
2019/tcl/lib/ffft/: CMakeLists.txt  ffft-0.1.tm  library.c  library.h  test.tcl
2019/tcl/lib/l2p/: CMakeLists.txt  l2p-0.1.tm  library.c  test.tcl
modules/: aoc-0.1.tm
(+81 files in other folders)
